--- a/index.html
+++ b/index.html
@@ -49,6 +49,47 @@
                     </i> Read More</button>
             </div>
         </section>
+        <section class="services">
+            <div class="container">
+                <ul class="services-list">
+                    <li class="services-item"><i><img src="./img/service-icon.svg" alt=""></i>
+                        <p class="services-title">Investmant Banking</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, necessitatibus!</p>
+                    </li>
+                    <li class="services-item"><i><img src="./img/service-icon2.svg" alt=""></i>
+                        <p class="services-title">Portfolio Manager</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, necessitatibus!</p>
+                    </li>
+                    <li class="services-item"><i><img src="./img/service-icon3.svg" alt=""></i>
+                        <p class="services-title">Tax & Custudio</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, necessitatibus!</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="solution">
+            <div class="container">
+                <div class="solution-inner">
+                    <div class="solution-inner-img">
+                        <img src="./img/Workmate.jpg" alt="">
+                    </div>
+                    <div class="solution-inner-text">
+                        <p class="solution-title">
+                            What you are looking for
+                        </p>
+                        <h2>
+                            We provide bespoke solutions
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum dignissimos quae
+                            laudantium asperiores nam aliquid impedit harum illum dolore explicabo ab dolores itaque
+                            rerum temporibus doloribus iste maiores deleniti?
+                        </p>
+                        <button class="btn" href="#">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./index.js"></script>
 </body>
