OKAY lets goyyyy

--- a/index.html
+++ b/index.html
@@ -68,26 +68,47 @@
             </div>
         </section>
         <section class="solution">
-            <div class="container">
-                <div class="solution-inner">
-                    <div class="solution-inner-img">
-                        <img src="./img/Workmate.jpg" alt="">
-                    </div>
-                    <div class="solution-inner-text">
-                        <p class="solution-title">
-                            What you are looking for
-                        </p>
-                        <h2>
-                            We provide bespoke solutions
-                        </h2>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum dignissimos quae
-                            laudantium asperiores nam aliquid impedit harum illum dolore explicabo ab dolores itaque
-                            rerum temporibus doloribus iste maiores deleniti?
-                        </p>
-                        <button class="btn" href="#">Read More</button>
-                    </div>
+            <div class="solution-inner">
+                <div class="solution-inner-img">
+                    <img src="./img/Workmate.jpg" alt="">
                 </div>
+                <div class="solution-inner-text">
+                    <p class="solution-title">
+                        What you are looking for
+                    </p>
+                    <h2>
+                        We provide bespoke solutions
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum dignissimos quae
+                        laudantium asperiores nam aliquid impedit harum illum dolore explicabo ab dolores itaque
+                        rerum temporibus doloribus iste maiores deleniti?
+                    </p>
+                    <button class="btn btn-second" href="#">Read More</button>
+                </div>
+            </div>
+        </section>
+        <section class="business">
+            <div class="container">
+                <p class="business-title">
+                    This is what we do
+                </p>
+                <h2>
+                    Business Cases
+                </h2>
+                <p class="business-title2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sapiente!
+                </p>
+                <ul class="business-list">
+                    <li><img src="./img/People1.jpg" alt=""></li>
+                    <li><img src="./img/People2.jpg" alt=""></li>
+                    <li><img src="./img/People3.jpg" alt=""></li>
+                    <li><img src="./img/People4.jpg" alt=""></li>
+                    <li><img src="./img/People5.jpg" alt=""></li>
+                    <li><img src="./img/People6.jpg" alt=""></li>
+                    <li><img src="./img/People7.jpg" alt=""></li>
+                    <li><img src="./img/People8.jpg" alt=""></li>
+                </ul>
             </div>
         </section>
     </main>
