--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>
                     We provide world class financial assistance
                 </p>
-                <button class="btn"><i><svg width="9" height="12" viewBox="0 0 9 12" fill="none"
+                <button class="btn btn-main"><i><svg width="9" height="12" viewBox="0 0 9 12" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M7.88555 6.59771L3.1043 11.379C2.77383 11.7094 2.23945 11.7094 1.9125 11.379L1.11797 10.5844C0.7875 10.254 0.7875 9.71958 1.11797 9.39263L4.50703 6.00356L1.11797 2.6145C0.7875 2.28403 0.7875 1.74966 1.11797 1.42271L1.90898 0.621143C2.23945 0.290674 2.77383 0.290674 3.10078 0.621143L7.88203 5.40239C8.21602 5.73286 8.21602 6.26724 7.88555 6.59771Z"
@@ -84,7 +84,7 @@
                         laudantium asperiores nam aliquid impedit harum illum dolore explicabo ab dolores itaque
                         rerum temporibus doloribus iste maiores deleniti?
                     </p>
-                    <button class="btn btn-second" href="#">Read More</button>
+                    <a class="btn btn-second" href="#">Read More</a>
                 </div>
             </div>
         </section>
@@ -108,6 +108,69 @@
                     <li><img src="./img/People6.jpg" alt=""></li>
                     <li><img src="./img/People7.jpg" alt=""></li>
                     <li><img src="./img/People8.jpg" alt=""></li>
+                </ul>
+            </div>
+        </section>
+        <section class="blog">
+            <div class="blog-inner">
+                <div class="blog-inner-img">
+                    <img src="./img/Coffe.jpg" alt="">
+                </div>
+                <div class="blog-inner-text">
+                    <p class="blog-title">
+                        April 16 2020
+                    </p>
+                    <h2>
+                        Blog Post One
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum dignissimos quae
+                        laudantium asperiores nam aliquid impedit harum illum dolore explicabo ab dolores itaque rerum
+                        temporibus doloribus iste maiores deleniti?
+                    </p>
+                    <a class="btn btn-second" href="#">Read Our Blog</a>
+                </div>
+            </div>
+        </section>
+        <section class="professional">
+            <div class="container">
+                <p class="professional-title">
+                    Who we are
+                </p>
+                <h2>
+                    Our Professional Team
+                </h2>
+                <p class="professional-title2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sapiente!
+                </p>
+                <ul class="professional-list">
+                    <li class="professional-item">
+                        <img class="professional-img" src="./img/professional1.jpg" alt="">
+                        <h3>
+                            John Doe
+                        </h3>
+                        <p>
+                            President
+                        </p>
+                    </li>
+                    <li class="professional-item">
+                        <img class="professional-img" src="./img/professional2.jpg" alt="">
+                        <h3>
+                            Jane Doe
+                        </h3>
+                        <p>
+                            Vice President
+                        </p>
+                    </li>
+                    <li class="professional-item">
+                        <img class="professional-img" src="./img/professional3.jpg" alt="">
+                        <h3>
+                            Steve Smith
+                        </h3>
+                        <p>
+                            Marketing Head
+                        </p>
+                    </li>
                 </ul>
             </div>
         </section>
